@@ -1,47 +1,117 @@
 package com.sprint.mission.discodeit.controller;
 
+import com.sprint.mission.discodeit.controller.api.MessageApi;
+import com.sprint.mission.discodeit.dto.data.MessageDto;
+import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
 import com.sprint.mission.discodeit.dto.request.MessageCreateRequest;
 import com.sprint.mission.discodeit.dto.request.MessageUpdateRequest;
-import com.sprint.mission.discodeit.entity.Message;
+import com.sprint.mission.discodeit.dto.response.PageResponse;
 import com.sprint.mission.discodeit.service.MessageService;
-import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
+import java.io.IOException;
+import java.time.Instant;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
-@RestController
-@RequestMapping("/api")
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort.Direction;
+import org.springframework.data.web.PageableDefault;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
+
+@Slf4j
 @RequiredArgsConstructor
-public class MessageController {
+@RestController
+@RequestMapping("/api/messages")
+public class MessageController implements MessageApi {
 
     private final MessageService messageService;
 
-    @PostMapping("/channels/{channelId}/messages")
-    public ResponseEntity<Message> create(@PathVariable UUID channelId,
-                                          @RequestBody MessageCreateRequest request) {
-        // channelId와 authorId는 request 안에 포함되어야 함
-        return ResponseEntity.status(HttpStatus.CREATED)
-                .body(messageService.create(request, Collections.emptyList()));
+    @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public ResponseEntity<MessageDto> create(
+        @RequestPart("messageCreateRequest") MessageCreateRequest messageCreateRequest,
+        @RequestPart(value = "attachments", required = false) List<MultipartFile> attachments
+    ) {
+        log.info("POST /messages  ch={} author={} attCnt={}",
+            messageCreateRequest.channelId(),
+            messageCreateRequest.authorId(),
+            attachments == null ? 0 : attachments.size());
+        log.debug("      attachments={}",
+            attachments == null ? List.of()
+                : attachments.stream()
+                .map(MultipartFile::getOriginalFilename)
+                .toList());
+        List<BinaryContentCreateRequest> attachmentRequests = Optional.ofNullable(attachments)
+            .map(files -> files.stream()
+                .map(file -> {
+                    try {
+                        return new BinaryContentCreateRequest(
+                            file.getOriginalFilename(),
+                            file.getContentType(),
+                            file.getBytes()
+                        );
+                    } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
+                })
+                .toList())
+            .orElse(new ArrayList<>());
+        MessageDto createdMessage = messageService.create(messageCreateRequest, attachmentRequests);
+        return ResponseEntity
+            .status(HttpStatus.CREATED)
+            .body(createdMessage);
     }
 
-    @GetMapping("/channels/{channelId}/messages")
-    public ResponseEntity<List<Message>> findAllByChannel(@PathVariable UUID channelId) {
-        return ResponseEntity.ok(messageService.findAllByChannelId(channelId));
+    @PatchMapping(path = "{messageId}")
+    public ResponseEntity<MessageDto> update(@PathVariable("messageId") UUID messageId,
+                                             @RequestBody MessageUpdateRequest request) {
+        log.info("PATCH /api/messages/{}", messageId);
+        MessageDto updatedMessage = messageService.update(messageId, request);
+        return ResponseEntity
+            .status(HttpStatus.OK)
+            .body(updatedMessage);
     }
 
-    @PutMapping("/messages/{id}")
-    public ResponseEntity<Message> update(@PathVariable UUID id,
-                                          @RequestBody MessageUpdateRequest request) {
-        return ResponseEntity.ok(messageService.update(id, request));
+    @DeleteMapping(path = "{messageId}")
+    public ResponseEntity<Void> delete(@PathVariable("messageId") UUID messageId) {
+        log.info("DELETE /api/messages/{}", messageId);
+        messageService.delete(messageId);
+        return ResponseEntity
+            .status(HttpStatus.NO_CONTENT)
+            .build();
     }
 
-    @DeleteMapping("/messages/{id}")
-    public ResponseEntity<Void> delete(@PathVariable UUID id) {
-        messageService.delete(id);
-        return ResponseEntity.noContent().build();
+    @GetMapping
+    public ResponseEntity<PageResponse<MessageDto>> findAllByChannelId(
+        @RequestParam("channelId") UUID channelId,
+        @RequestParam(value = "cursor", required = false) Instant cursor,
+        @PageableDefault(
+            size = 50,
+            page = 0,
+            sort = "createdAt",
+            direction = Direction.DESC
+        ) Pageable pageable) {
+        log.info("GET   /api/messages  channelId={} cursor={}", channelId, cursor);
+        PageResponse<MessageDto> messages = messageService.findAllByChannelId(channelId, cursor,
+            pageable);
+        return ResponseEntity
+            .status(HttpStatus.OK)
+            .body(messages);
     }
 }
